# tython

./: .gitignore  AGENTS.md  Makefile  README.md  hello.ty  main.py  mkdocs.yml  pyproject.toml  script.py  script.txt  test.json
.github/workflows/: ci.yml  corpus.yml  docs.yml  perf.yml
benchmarks/perf_project/: project.toml
benchmarks/perf_project/src/: main.ty  util.ty
corpus/invalid/: func_missing_return_type.ty  ternary_standalone_statement.dp
corpus/valid/: bindings.dp  error_handling.py  functions_expression_body.py  functions_expression_body.ty
docs/: getting-started.md  index.md  installation.md
docs/ai/: ai-coding-guide.md  debugging-guide.md  llms.txt
docs/examples/: common-patterns.md  index.md  small-programs.md
docs/language/: enums.md  errors.md  expressions.md  functions-and-blocks.md  functions.md  imports.md  matrix.md  quickstart.md  records-and-classes.md  scope.md  values-and-bindings.md
docs/reference/: diagnostic-schema.md  error-codes.md  parser-pipeline.md
docs/stylesheets/: extra.css
docs/tooling/: cli.md  formatter.md  lsp.md  vim-neovim.md
parser/: __init__.py  cli.py  cli_typer.py  core.py  custom_frontend.py  diagnostics.py  formatter.py  lint.py  lowering.py  project.py  project_build.py  repl.py  semantics.py  transpile.py
parser/custom_frontend/: __init__.py  api.py  constants.py  errors.py  functions.py  helpers.py  rewriters_brace.py  rewriters_misc.py  rewriters_postbrace.py  rewriters_structured.py  rewriters_ternary.py  type_system.py
parser/lsp/: server.py
parser/semantics/: __init__.py  api.py  checker.py  constants.py  errors.py  models.py  pyimport_stubs.py  type_utils.py
scripts/: bench_project.py  error_catalog.py  run_corpus.py
tests/: test_build_cache.py  test_cli_diagnostics.py  test_cli_typer.py  test_corpus_runner.py  test_differential.py  test_error_catalog.py  test_errors.py  test_formatter.py  test_golden.py  test_lint_cases.py  test_lowering.py  test_lsp.py  test_main_transpile.py  test_main_txt_runtime.py  test_main_ty_runtime.py  test_matrix_runtime.py  test_smoke.py  test_type_context.py
tests/cases/formatter/: class_body.expected.ty  class_body.ty  comments.expected.ty  comments.ty  imports_calls.expected.ty  imports_calls.ty  messy.expected.ty  messy.ty
tests/cases/golden/: bindings_and_blocks.ast  control_flow_core.ast  control_flow_core.ty  enum_and_list.ast  enum_and_list.ty  error_handling_core.ast  error_handling_core.dp  expressions_core.ast  expressions_core.dp  functions_core.ast  functions_core.dp  imports_core.ast  records_classes_core.ast  records_classes_core.dp
tython-vim/ftdetect/: tython.vim
tython-vim/lsp/: tython.lua
tython-vim/plugin/: tython_lsp.lua  tython_lsp.vim
tython-vim/syntax/: tython.vim
tython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tython_std/: __init__.py  matrix.py
(+139 files in other folders)
