[project]
name = "tython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pegen>=0.3.0",
    "pytest>=9.0.3",
    "rich>=14.0.0",
    "ruff>=0.15.10",
    "typer>=0.12.3",
]

[project.scripts]
transpile = "parser.transpile:main"
tython = "parser.cli_typer:main"
tython-lsp = "parser.lsp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: parse success and failure checks",
    "golden: AST snapshot checks",
    "lowering: IR to Python AST checks",
    "differential: CPython parity and compile checks",
]

[tool.ruff]
extend-exclude = ["build", "dist", "tython.egg-info", "corpus", "tests/cases"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["parser*"]
